--- a/TextEditor/TextEditorDirectWrite/TextEditorDirectWrite.vcproj
+++ b/TextEditor/TextEditorDirectWrite/TextEditorDirectWrite.vcproj
@@ -121,6 +121,8 @@
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
+				EnableEnhancedInstructionSet="0"
+				FloatingPointModel="0"
 				UsePrecompiledHeader="2"
 				BrowseInformation="1"
 				WarningLevel="3"
