added 'inline' mode for pop-up field editing on top of other surfaces; generalized 'find in files'; exposed TextRenderer-like api for DirectWrite; upgrade project to VS 2015; give useful error message when VS2015 redist. is missing

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # application compilation intermediate files
 
+/TextEditor/.vs/*
 /TextEditor/TextEditor.ncb
 /TextEditor/TextEditor.suo
+/TextEditor/TextEditorApp/bin/*/*.vshost.*
 /TextEditor/TextEditorApp/obj/*
+/TextEditor/TextEditorApp/*.user
 /TextEditor/TextEditorDirectWrite/x64/*
-/TextEditor/TextEditorDirectWrite/*.vcproj.*.user
+/TextEditor/TextEditorDirectWrite/*.user
 /TextEditor/TextEditorLib/obj/*
+/TextEditor/TextEditorLib/*.user
 
 # local utility scripts, etc.
 
