high dpi support (half-baked)

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /TextEditor/TextEditorApp/obj/*
 /TextEditor/TextEditorApp/*.user
 /TextEditor/TextEditorDirectWrite/x64/*
+/TextEditor/TextEditorDirectWrite/x64/*/*.metagen
 /TextEditor/TextEditorDirectWrite/*.user
 /TextEditor/TextEditorLib/obj/*
 /TextEditor/TextEditorLib/*.user
