high dpi layout glitch fix; preserve bom fix; remove statics from mixed-mode interop dll to fix shutdown issues; work around font height inaccuracy in gdi mode; delete key handler to fix focus issues for complex forms; speed up scroll bar extent recomputation

--- a/TextEditor/TextEditorLib/TextEditorLib.csproj
+++ b/TextEditor/TextEditorLib/TextEditorLib.csproj
@@ -110,8 +110,10 @@
     <Compile Include="GoToDialog.designer.cs">
       <DependentUpon>GoToDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hacks.cs" />
     <Compile Include="ITextService.cs" />
     <Compile Include="ITextStorage.cs" />
+    <Compile Include="LineWidthCache.cs" />
     <Compile Include="Marshal2.cs" />
     <Compile Include="Pinning.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
