--- a/TextEditor/TextEditorApp/TextEditorApp.csproj
+++ b/TextEditor/TextEditorApp/TextEditorApp.csproj
@@ -118,6 +118,9 @@
       <DependentUpon>SettingsPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="StochasticTest.resx">
+      <DependentUpon>StochasticTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TabSizeDialog.resx">
       <DependentUpon>TabSizeDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -162,6 +165,12 @@
     </Compile>
     <Compile Include="SettingsPanel.designer.cs">
       <DependentUpon>SettingsPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StochasticTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StochasticTest.Designer.cs">
+      <DependentUpon>StochasticTest.cs</DependentUpon>
     </Compile>
     <Compile Include="TabSizeDialog.cs">
       <SubType>Form</SubType>
