switch to 'TreeLib'

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # application compilation intermediate files
 
 /TextEditor/.vs/*
-/TextEditor/TextEditor.ncb
-/TextEditor/TextEditor.suo
-/TextEditor/TextEditorApp/bin/*/*/*.vshost.*
-/TextEditor/TextEditorApp/obj/*
+/TextEditor/ipch
+/TextEditor/TextEditor.VC.db
+/TextEditor/TextEditorApp/bin
+/TextEditor/TextEditorApp/obj
 /TextEditor/TextEditorApp/*.user
-/TextEditor/TextEditorDirectWrite/Win32/*
-/TextEditor/TextEditorDirectWrite/x64/*
+/TextEditor/TextEditorDirectWrite/Win32
+/TextEditor/TextEditorDirectWrite/x64
 /TextEditor/TextEditorDirectWrite/*.user
-/TextEditor/TextEditorLib/obj/*
+/TextEditor/TextEditorLib/obj
+/TextEditor/TextEditorLib/bin
 /TextEditor/TextEditorLib/*.user
 
 # local utility scripts, etc.
