--- a/TextEditor/TextEditorLib/TextEditorLib.csproj
+++ b/TextEditor/TextEditorLib/TextEditorLib.csproj
@@ -123,7 +123,7 @@
     <Compile Include="LineWidthCache.cs" />
     <Compile Include="Pinning.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SkipList.cs" />
+    <Compile Include="LineSkipMap.cs" />
     <Compile Include="StringStorage.cs">
       <SubType>Component</SubType>
     </Compile>
