switch from local project dependency to NuGet package for TreeLib

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /TextEditor/*.VC.opendb
 /TextEditor/.vs/*
 /TextEditor/ipch
+/TextEditor/packages
 /TextEditor/TextEditor.VC.db
 /TextEditor/TextEditorApp/bin
 /TextEditor/TextEditorApp/obj
